<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="database_password">g3p2bzQm-J2pG6NR</string>
    <string name="vaccine_provided_when">When was the vaccine provided?</string>
    <string name="vaccine_provided_where">Where was the vaccine provided?</string>
    <string name="details">Details</string>
    <string name="num1223">1223</string>
    <string name="num7485">7485</string>
    <string name="num1">1</string>
    <string name="num124">124</string>
    <string name="num123">123</string>
    <string name="date20192825">2019-28-25</string>
    <string name="within24">With-in 24 Hours</string>
    <string name="received">Received</string>
    <string name="app_name">COVID APP</string>
    <string name="PromptUsername">Username</string>
    <string name="PromptPassword">Password</string>
    <string name="Login">Login</string>
    <string name="sync">Last Sync Date: Date Time</string>
    <string name="version">Version 1.0</string>
    <string name="recevied">Received</string>
    <string name="comorbidity">COMORBIDITY</string>
    <string name="dateLabel">Date</string>
    <string name="diabetes">Diabetes</string>
    <string name="reading">Reading</string>
    <string name="bloodPressure">Blood Pressure</string>
    <string name="cholestrol">LDL Cholestrol</string>
    <string name="mgldl">mgl/dL</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="addNewRecord">Add New Record</string>
    <string name="searchVillage">Search Village</string>
    <string name="dueVacA">Due for Vaccine A</string>
    <string name="dueVacB">Due for Vaccine B</string>
    <string name="dueVacC">Due for Vaccine C</string>
    <string name="notVacc">Individuals Not Yet Vaccinated</string>
    <string name="vaccA">Vaccine A</string>
    <string name="vaccB">Vaccine B</string>
    <string name="vaccC">Vaccine C</string>
    <string name="shot1">Shot 01</string>
    <string name="shot2">Shot 02</string>
    <string name="tBadmin">To Be Administered</string>
    <string name="selectHealth">Select Health Facility</string>
    <string name="receivedOn">Received on</string>
    <string name="dateRecevied">Date Received</string>
    <string name="comments">Comments</string>
    <string name="name1">Kiran Iqbal</string>
    <string name="name2">Salman Iqbal</string>
    <string name="immunizationProvided">Immunization Provided At</string>
    <string name="immunizationhead">Immunization Record</string>
    <string name="notes">Notes</string>
    <string name="sideHistory">Side Effects History</string>
    <string name="co_history">Comorbidity History</string>
    <string name="date">Wednesday, Nov 4, 2019</string>
    <string name="taskList">TASKS LIST</string>
    <string name="newFamily">New Family</string>
    <string name="addFamily">Add Family Member</string>
    <string name="newIndividual">New Individual</string>
    <string name="famNumEng">Family Number</string>
    <string name="famHead">Name of Family Head</string>
    <string name="famHeadCnic">Family Head CNIC</string>
    <string name="famHeadMobile">Family Head Mobile Number</string>
    <string name="address">Complete Address</string>
    <string name="district">District</string>
    <string name="tehsil">Tehsil</string>
    <string name="union">Union Council</string>
    <string name="village">Village</string>
    <string name="Toilet">Toilet System</string>
    <string name="drinkingWater">Drinking Water Availability</string>
    <string name="submit">Submit</string>
    <string name="registerInd">REGISTER FAMILY MEMBER</string>
    <string name="registerFam">REGISTER FAMILY</string>
    <string name="gender">Gender</string>
    <string name="Marital">Marital Status</string>
    <string name="dob">Date of Birth</string>
    <string name="agee">Age</string>
    <string name="cnic">CNIC</string>
    <string name="status">Status</string>
    <string name="indID">Individual ID</string>
    <string name="famID">Family ID</string>
    <string name="province">Province</string>
    <string name="division">Division</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="father">Father\'s Name</string>
    <string name="profile">PROFILE</string>
    <string name="fullName">Full Name</string>
    <string name="ageInYears">years Old</string>
    <string name="covid">COVID IMMUNIZATION</string>
    <string name="sideEffects">SIDE EFFECTS</string>
    <string name="co_morbidity">C0MORBIDITY</string>
    <string name="HomeButton">Home Button</string>
    <string name="UnionButton">Union Button</string>
    <string name="title_activity_profile">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="addNew">Add New</string>
    <string name="se_hyptension">Hypotension</string>
    <string name="se_syncope_near_syncope">Syncope/near syncope</string>
    <string name="se_anaphylaxis">Anaphylaxis</string>
    <string name="se_local_redness_pain">Local redness/pain</string>
    <string name="se_fatigue">Fatigue</string>
    <string name="se_headache">Headache</string>
    <string name="se_myalgias">Myalgias</string>
    <string name="se_diarrhea">Diarrhea</string>
    <string name="se_chills">Chills</string>
    <string name="se_nausea">Nausea</string>
    <string name="se_urticaria">Urticaria</string>
    <string name="se_joint_pain">Joint pain</string>
    <string name="se_fever">Fever</string>
    <string name="se_feverValue">Reading</string>
    <string name="se_shortnessBreath">Shortness of Breath</string>
    <string name="se_lossTaste">Loss of Taste</string>
    <string name="se_lossSmell">Loss of Smell</string>
    <string name="cm_cancer">Cancer</string>
    <string name="cm_chronic_kidney_disease">Chronic kidney disease</string>
    <string name="cm_copd">COPD</string>
    <string name="cm_heart_condition">Heart conditions, such as heart failure, coronary artery disease, or cardiomyopathies</string>
    <string name="cm_immune_compromised_organ">Immunocompromised state from solid organ transplant</string>
    <string name="cm_obesity">Obesity – BMI ≥30</string>
    <string name="cm_sickle_cell_disease">Sickle cell disease</string>
    <string name="cm_pregnancy">Pregnancy</string>
    <string name="cm_asthma">Asthma (moderate-to-severe)</string>
    <string name="cm_cerebrovascular_disease">Cerebrovascular disease</string>
    <string name="cm_cystic_fibrosis">Cystic fibrosis</string>
    <string name="cm_hypertension">Hypertension</string>
    <string name="cm_immune_compromised_other">Immunocompromised state from blood or bone marrow transplant, immune deficiencies, HIV, use of corticosteroids, or use of other immune weakening medicines</string>
    <string name="cm_neurologic">Neurologic conditions, such as dementia</string>
    <string name="cm_liver_disease">Liver disease</string>
    <string name="cm_overweight">Overweight, BMI 25-30 (Indicator : Ht and wt)</string>
    <string name="cm_pulmonary_fibrosis">Pulmonary fibrosis</string>
    <string name="cm_thalassemia">Thalassemia</string>
    <string name="cm_type1_diabetes">Type 1 diabetes mellitus</string>
    <string name="cm_ldl_cholestrol">LDL cholesterol</string>
    <string name="offline_sync">Offline Sync</string>
    <string name="last_sync">Last Sync :</string>
    <string name="login_username_text">Username</string>
    <string name="login_password_text">Password</string>
    <string name="login_forgot_password_text">Forgot Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_lastsync_text">Last Sync: </string>
    <string name="sync_country">Sync Countries</string>
    <string name="sync_province">Sync Province</string>
    <string name="sync_district">Sync District</string>
    <string name="sync_tehsil">Sync Tehsil</string>
    <string name="sync_uc">Sync Union Council</string>
    <string name="sync_village">Sync Village</string>
    <string name="sync_health_facility">Sync Health Facility</string>
    <string name="sync_users">Sync Users</string>
    <string name="sync_medicines">Sync Medicines</string>
    <string name="sync_vaccine">Sync Vaccines</string>
    <string name="hp_kamo_ki_fehrist_text">کاموں کی فہرست</string>
    <string name="hp_talash_gaon_text">تلاش نام اور گاؤں</string>
    <string name="nav_register_text">رجسٹر</string>
    <string name="nav_talash_text">تلاش</string>
    <string name="nav_stock_text">اسٹاک</string>
    <string name="nav_vaccinate_inlisted_text">ویکسینیٹ انلسٹڈ</string>
    <string name="reg_khandan_register_text">خاندان رجسٹر کریں</string>
    <string name="reg_khandan_text">رجسٹرخاندان</string>
    <string name="reg_khandan_ka_number_text">خاندان کا نمبر</string>
    <string name="reg_khandan_kai_sarbarah_ka_naam_text">خاندان کے سربراہ کا نام بمعہ ولدیت</string>
    <string name="reg_khandan_kai_sarbarah_ka_shanakti_card_numbr_text">خاندان کے سربراہ کا شناختی کارڈ نمبر</string>
    <string name="reg_khandan_kai_sarbarah_ka_mobile_numbr_text">خاندان کے سربراہ کا موبائل نمبر</string>
    <string name="reg_mukamal_pata_text">مکمل پتہ</string>
    <string name="reg_tehseel_text">تحصیل</string>
    <string name="reg_union_council_text">یونین کونسل</string>
    <string name="reg_gaon_text">گاؤں</string>
    <string name="reg_zila_text">ضلع</string>
    <string name="reg_peenay_kai_paani_ka_zarya_text">پینے کے پانی کا ذریہ</string>
    <string name="reg_latrine_system_text">لیٹرین سسٹم</string>
    <string name="reg_jaama_kre_button_text">جمع کریں</string>
    <string name="hp_listview_name_text">سلمان اقبال</string>
    <string name="hp_listview_tareekh_text">نومبر 02</string>
    <string name="hp_listview_tareekh_adaegi_text">تاریخ ادائیگی</string>
    <string name="hp_listview_gaon_text">گاؤں 123</string>
    <string name="afm_khandan_text">Family</string>
    <string name="afm_khandan_number_text">Family Number:</string>
    <string name="afm_name_text">سلمان اقبال</string>
    <string name="afm_khandan_kay_rukan_shamil_kre_button_text">خاندان کے رکن شامل کریں</string>
    <string name="age">عمر</string>
    <string name="dialog_ek_ko_muntakhib_kre_text">مندرجہ ذیل میں سے ایک کو منتخب کریں</string>
    <string name="dialog_dou_saal_sy_kum_umer_text">2 سال سے کم عمر</string>
    <string name="dialog_dou_saal_sy_zayed_umer_text">2 سال سے زائد عمر</string>
    <string name="cr_khandan_register_kre_text">خاندان رجسٹر کریں</string>
    <string name="cr_dou_saal_sy_kum_umer">2 سال سے کم عمر</string>
    <string name="cr_naam_bimaah_waldiyat_text">نام (بمعہ ولدیت / زوجیت)</string>
    <string name="cr_walid_ka_naame_text">والد کا نام</string>
    <string name="cr_walida_ka_naam_text">والدہ  کا نام</string>
    <string name="cr_sarbarah_kay_sath_rishta_text">سربراہ کے ساتھ رشتہ</string>
    <string name="cr_tareekh_indraj_text">تاریخ اندراج</string>
    <string name="cr_shanakhti_card_number_text">شناختی کارڈ نمبر</string>
    <string name="cr_tareekh_pedaish_text">تاریخ پیدائش</string>
    <string name="cr_azdawaji_hasiyat_text">ازدواجی حیثیت</string>
    <string name="total_number_of_patients_text">کل مریضوں کی تعداد</string>
    <string name="refer_number_of_patients_text">کل ریفر مریضوں کی تعداد</string>
    <string name="_150">150</string>
    <string name="_201_06_15">201-06-15</string>
    <string name="_01_10">01:10</string>
    <string name="_0">0 سال</string>
    <string name="_10">10</string>
    <string name="balance">Balance:</string>
    <string name="videoname">VideoName</string>
    <string name="utilizedEng">Utilized:</string>
    <string name="wastageColon">Wastage:</string>
</resources>