<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_sync"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/color_white"
    app:cardCornerRadius="5dp"
    app:cardElevation="@dimen/_5sdp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_6sdp">


        <RelativeLayout
            android:id="@+id/rl_totalPat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/total_number_of_patients_text"
                android:textColor="@color/dark_blue_color"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/tvTotalPatients"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/circle_shape_layout"
                android:backgroundTint="@color/blue_text_color"
                tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/tvCountTotalPatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:maxLength="3"
                    android:text="@string/_10"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_totalReferPat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_totalPat"
            android:layout_marginTop="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/refer_number_of_patients_text"
                android:textColor="@color/dark_blue_color"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_TotalReferPat"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/circle_shape_layout"
                android:backgroundTint="@color/blue_text_color"
                tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/tvCountReferPatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:maxLength="3"
                    android:text="@string/_150"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />


            </LinearLayout>

        </RelativeLayout>


        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_totalReferPat"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/_201_06_15"
            android:textColor="@color/light_grey_color"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_totalReferPat"

            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/_01_10"
            android:textColor="@color/light_grey_color"
            android:textSize="@dimen/_12sdp" />


    </RelativeLayout>

</android.support.v7.widget.CardView>