<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".CovidDashboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp">

        <ImageButton
            android:id="@+id/unionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/union"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/activityTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:text="@string/covid"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/ic_home_white"
            tools:ignore="ContentDescription" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/fullName"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>
        <View
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_height="2dp"
            android:background="@color/purple_200"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/ageInYears"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:background="@drawable/shape">

        <!--Expandable List

        <ExpandableListView
            android:id="@+id/lvExp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

            -->

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/shape_purple_accent"
            android:gravity="center"
            android:text="@string/addNew"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:backgroundTint="@android:color/transparent"
            app:backgroundTintMode="add" />

    </LinearLayout>

</LinearLayout>